--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -8,3 +8,7 @@ body{
   background-image: url('/site-img/background.png');
   /*background-color: red;*/
 }
+.main{
+  width:80%;
+  border:1px solid #ff0000;
+}
