started on front end design

--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -8,7 +8,8 @@ body{
   background-image: url('/site-img/background.png');
   /*background-color: red;*/
 }
-.main{
+main{
   width:80%;
   border:1px solid #ff0000;
+  background-color: white;
 }
