--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -13,7 +13,7 @@ body{
 **************************/
 @font-face {
   font-family: "sui-generis";
-  src: url("/fonts/sui-generis-rg.ttf");
+  src: url("/fonts/sui-generis-rg.ttf") format('truetype');
 }
 
 /**************************
@@ -48,11 +48,13 @@ body{
   }
 
   .section-logo-site-signup{
+    background: linear-gradient(black,#1e1e1e);
     span{
       font-family: "sui-generis";
       color:white;
       font-size:1.5em;
     }
+
     .start_logo_name{
       /*border:1px solid blue;*/
 
