--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -48,26 +48,72 @@ body{
   }
 
   .section-logo-site-signup{
+
+    color:white;
+    font-weight: 700;
+    font-family: Arial;
+
     background: linear-gradient(black,#1e1e1e);
     span{
-      font-family: "sui-generis";
+      font-family: arial;
       color:white;
-      font-size:1.5em;
+      font-size:1.2em;
     }
 
-    .start_logo_name{
-      /*border:1px solid blue;*/
-
-    }
-    .end_logo_name{
-      /*border:1px solid green;*/
-      color:red;
-      /*font-size:1.5em;
-      vertical-align: middle;*/
-    }
     .format_logo{
       margin-top: 10%;
+      width: 50%;
+      /*padding-left: 0px;*/
     }
+    .sign_up_form{
+      border:2px solid #550000;
+      margin-top: 3%;
+      margin-bottom: 3%;
+      padding-left: 5px;
+      padding-right: 5px;
+      background-color: red;
+      height: 80%;
+      width: 100%;
+      text-align: center;
+      border-radius:10px;
+      a{color:white;
+      font-size: 2em;
+      }
+    }
+    .format_sign_up_form{
+      text-align: center;
+    }
+
+    .sign-in-form{
+      .log-in-inputs{
+          float:left;
+          width:65%
+      }
+      .log-in-buttons{
+          float:right;
+          margin-right:5px;
+          width:33%; height:100%;
+      }
+      .format_inputs{
+          background-color: transparent;
+          border-bottom:1px solid red;
+          border-left:0px solid red;
+          border-right:0px solid red;
+          border-top:0px solid;
+          border-radius:0px;
+          width:95%;
+          /*margin-top:2px;*/
+      }
+      .format_inputs:focus{
+        border-bottom:2px solid white;
+      }
+      .format-login-button{
+        height:100%;
+        color:blue;
+      }
+
+    }
+
   }
 
 }/*end header classes*/
