--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -119,5 +119,17 @@ body{
 }/*end header classes*/
 .section-search{
   background-color: black;
-  color:yellow;
+  text-align: center;
+
+  .main-search-body{
+    background-color: #1f1f1f;
+    width: 95%;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    border-radius:5px;
+    /*margin-left: auto;
+    margin-right: auto;*/
+    display: inline-block
+  }
+
 }
