--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -43,7 +43,7 @@ body{
       color:#dfddde;
     }
   }
-  .col-half-offset{
+  .link_element{
     border-left:1px solid #2d2d2d;
   }
 
@@ -134,12 +134,9 @@ body{
           #ff0000 5px,
           #ff0000 5px
         );
-
       }
     }
-
   }
-
 }/*end header classes*/
 .section-search{
   background-color: #1f1f1f;
@@ -148,4 +145,9 @@ body{
   margin-bottom: 5px;
   border-radius:5px;
   text-align: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  select{
+    margin-bottom: 5px
+  }
 }
