configured css to work with tablet devices, it displays well on small android tablet required further testing on bigger tablets and/or devices - only on header

--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -66,6 +66,9 @@ body{
       margin-top: 10%;
       width: 50%;
       /*padding-left: 0px;*/
+      img{
+        width:160px;
+      }
     }
     .sign_up_form{
       border:2px solid #550000;
