worked more on graphics

--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -1,3 +1,4 @@
 $mobileBreakpoint: 500px;
-$tabletBreakpoint: 1198px;
-$phoneBreakpoint: 400px;
+$maxTabletBreakpoint: 1198px;
+$minTabletBreakpoint: 700px;
+$phoneBreakpoint: 699px;
