added intermediari scss variable

--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -1,4 +1,5 @@
-$mobileBreakpoint: 500px;
+$intermediateMin:700px;
+$intermediateMax:991px;
 $maxTabletBreakpoint: 1198px;
 $minTabletBreakpoint: 700px;
 $phoneBreakpoint: 699px;
